# promotTool

./: README.md  RUST_INSTALL.md  index.html  package-lock.json  package.json  prompt-engineering-knowledge-base.md  prompt-template-standard.md  simple.html  swiss-style-hard-prompt.md  test.html  vite.config.js  实施方案.md
.claude/: settings.local.json
assets/: index-CwTXAWwy.js  index-DH9mrJM-.js  index-DKYO4OQ_.js  index-DvVi9kzc.js
electron/: main.js  preload.js
src/: app-new.js  app.js  data-full.js  data.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
